feat: localization indo

--- a/app/src/main/res/layout/fragment_detail_product.xml
+++ b/app/src/main/res/layout/fragment_detail_product.xml
@@ -86,7 +86,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_bold"
-                    android:text="@string/kategori"
+                    android:text="@string/category"
                     android:textAppearance="@android:style/TextAppearance.Material"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -98,7 +98,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
                     android:fontFamily="@font/poppins_bold"
-                    android:text="Deskripsi"
+                    android:text="@string/description"
                     android:textAppearance="@android:style/TextAppearance.Material"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="@+id/textKategori"
@@ -113,7 +113,7 @@
                     android:layout_marginStart="28dp"
                     android:layout_marginTop="4dp"
                     android:fontFamily="@font/poppins_regular"
-                    android:text="Deskripsi"
+                    android:text="@string/description"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toEndOf="@+id/textDescription"
@@ -124,7 +124,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_regular"
-                    android:text="@string/merk"
+                    android:text="@string/brand"
                     app:layout_constraintBottom_toBottomOf="@+id/textMerk"
 
                     app:layout_constraintStart_toStartOf="@+id/tvDescription"
@@ -137,7 +137,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
                     android:fontFamily="@font/poppins_bold"
-                    android:text="Merk"
+                    android:text="@string/brand"
                     android:textAppearance="@android:style/TextAppearance.Material"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="@+id/textDescription"
@@ -151,7 +151,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"
                     android:fontFamily="@font/poppins_regular"
-                    android:text="@string/kategori"
+                    android:text="@string/category"
                     app:layout_constraintBottom_toBottomOf="@+id/textKategori"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.019"
@@ -167,7 +167,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:layout_marginStart="15dp"
-                android:text="Sales Prediction"
+                android:text="@string/sales_prediction"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                 android:textStyle="bold"
                 android:textColor="@color/neutral_60"
@@ -200,7 +200,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:layout_marginStart="15dp"
-                android:text="Profit Prediction"
+                android:text="@string/profit_prediction"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                 android:textStyle="bold"
                 android:textColor="@color/neutral_60"
