--- a/app/src/main/res/layout/fragment_detail_product.xml
+++ b/app/src/main/res/layout/fragment_detail_product.xml
@@ -53,7 +53,7 @@
                 android:fontFamily="@font/poppins_bold"
                 android:text="@string/product_name"
                 android:textAppearance="@android:style/TextAppearance.Material"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -66,7 +66,7 @@
                 android:fontFamily="@font/poppins_bold"
                 android:text="@string/product_price"
                 android:textAppearance="@android:style/TextAppearance.Material"
-                android:textSize="26dp"
+                android:textSize="26sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/productName"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -91,6 +91,20 @@
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tvKategori"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="30dp"
+                    android:fontFamily="@font/poppins_regular"
+                    android:text="@string/category"
+                    app:layout_constraintBottom_toBottomOf="@+id/textKategori"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.297"
+                    app:layout_constraintStart_toEndOf="@id/textKategori"
+                    app:layout_constraintTop_toTopOf="@id/textKategori"
+                    app:layout_constraintVertical_bias="0.0" />
 
                 <TextView
                     android:id="@+id/textDescription"
@@ -120,18 +134,6 @@
                     app:layout_constraintTop_toTopOf="@+id/textDescription" />
 
                 <TextView
-                    android:id="@+id/tvMerk"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins_regular"
-                    android:text="@string/brand"
-                    app:layout_constraintBottom_toBottomOf="@+id/textMerk"
-
-                    app:layout_constraintStart_toStartOf="@+id/tvDescription"
-                    app:layout_constraintTop_toTopOf="@+id/textMerk"
-                    app:layout_constraintVertical_bias="0.0" />
-
-                <TextView
                     android:id="@+id/textMerk"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -146,18 +148,40 @@
                     app:layout_constraintTop_toBottomOf="@+id/textDescription" />
 
                 <TextView
-                    android:id="@+id/tvKategori"
+                    android:id="@+id/tvMerk"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="30dp"
                     android:fontFamily="@font/poppins_regular"
-                    android:text="@string/category"
-                    app:layout_constraintBottom_toBottomOf="@+id/textKategori"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.019"
-                    app:layout_constraintStart_toEndOf="@id/textKategori"
-                    app:layout_constraintTop_toTopOf="@id/textKategori"
-                    app:layout_constraintVertical_bias="1.0" />
+                    android:text="@string/brand"
+                    app:layout_constraintBottom_toBottomOf="@+id/textMerk"
+                    app:layout_constraintStart_toStartOf="@+id/tvDescription"
+                    app:layout_constraintTop_toTopOf="@+id/textMerk"
+                    app:layout_constraintVertical_bias="0.0" />
+
+                <TextView
+                    android:id="@+id/textCurrentPrice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    android:fontFamily="@font/poppins_bold"
+                    android:text="@string/current_price"
+                    android:textAppearance="@android:style/TextAppearance.Material"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="@+id/textDescription"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="@+id/textDescription"
+                    app:layout_constraintTop_toBottomOf="@+id/textMerk" />
+
+                <TextView
+                    android:id="@+id/tvCurrentPrice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_regular"
+                    android:text="@string/current_price"
+                    app:layout_constraintBottom_toBottomOf="@+id/textCurrentPrice"
+                    app:layout_constraintStart_toStartOf="@+id/tvMerk"
+                    app:layout_constraintTop_toTopOf="@+id/textCurrentPrice"
+                    app:layout_constraintVertical_bias="0.0" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
